--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^4.18.2",
     "jest": "^29.7.0"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.3"
   }
 }
