--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Build de l'image Docker
         run: |
-         docker build -t project-cicd:${{github.sha}} .
+         docker build -f ./Dockerfile -t project-cicd:${{github.sha}} .
          docker tag projet-cicd:${{ github.sha }} projet-cicd:latest 
 
 
